tests/validation/cattlevalidationtest/core/resources/k8s/ingress_17.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress17
  annotations:
   http.port: "101"

spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: k8test17-one
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: k8test17-two
          servicePort: 80
